--- a/src/output.css
+++ b/src/output.css
@@ -624,39 +624,6 @@ html {
   scrollbar-color: color-mix(in oklch, currentColor 60%, transparent) transparent;
 }
 
-:root {
-  color-scheme: light;
-  --in: 72.06% 0.191 231.6;
-  --su: 64.8% 0.150 160;
-  --wa: 84.71% 0.199 83.87;
-  --er: 71.76% 0.221 22.18;
-  --pc: 15.2344% 0.017892 200.026556;
-  --sc: 15.787% 0.020249 356.29965;
-  --ac: 15.8762% 0.029206 78.618794;
-  --nc: 84.7148% 0.013247 313.189598;
-  --inc: 0% 0 0;
-  --suc: 0% 0 0;
-  --wac: 0% 0 0;
-  --erc: 0% 0 0;
-  --rounded-box: 1rem;
-  --rounded-badge: 1.9rem;
-  --animation-btn: 0.25s;
-  --animation-input: .2s;
-  --btn-focus-scale: 0.95;
-  --border-btn: 1px;
-  --p: 76.172% 0.089459 200.026556;
-  --s: 78.9351% 0.101246 356.29965;
-  --a: 79.3811% 0.146032 78.618794;
-  --n: 23.5742% 0.066235 313.189598;
-  --b1: 97.7882% 0.00418 56.375637;
-  --b2: 93.9822% 0.007638 61.449292;
-  --b3: 91.5861% 0.006811 53.440502;
-  --bc: 23.5742% 0.066235 313.189598;
-  --rounded-btn: 1.9rem;
-  --tab-border: 2px;
-  --tab-radius: 0.7rem;
-}
-
 .container {
   width: 100%;
 }
@@ -723,18 +690,6 @@ html {
     background-color: var(--fallback-n,oklch(var(--n)/var(--tw-bg-opacity)));
     --tw-text-opacity: 1;
     color: var(--fallback-nc,oklch(var(--nc)/var(--tw-text-opacity)));
-  }
-
-  .table tr.hover:hover,
-  .table tr.hover:nth-child(even):hover {
-    --tw-bg-opacity: 1;
-    background-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-bg-opacity)));
-  }
-
-  .table-zebra tr.hover:hover,
-  .table-zebra tr.hover:nth-child(even):hover {
-    --tw-bg-opacity: 1;
-    background-color: var(--fallback-b3,oklch(var(--b3)/var(--tw-bg-opacity)));
   }
 }
 
@@ -942,18 +897,46 @@ html {
   align-items: center;
 }
 
-.stat {
+.swap {
+  position: relative;
   display: inline-grid;
-  width: 100%;
-  grid-template-columns: repeat(1, 1fr);
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
-  border-color: var(--fallback-bc,oklch(var(--bc)/var(--tw-border-opacity)));
-  --tw-border-opacity: 0.1;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  place-content: center;
+  cursor: pointer;
+}
+
+.swap > * {
+  grid-column-start: 1;
+  grid-row-start: 1;
+  transition-duration: 300ms;
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  transition-property: transform, opacity;
+}
+
+.swap input {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
+.swap .swap-on,
+.swap .swap-indeterminate,
+.swap input:indeterminate ~ .swap-on {
+  opacity: 0;
+}
+
+.swap input:checked ~ .swap-off,
+.swap-active .swap-off,
+.swap input:indeterminate ~ .swap-off {
+  opacity: 0;
+}
+
+.swap input:checked ~ .swap-on,
+.swap-active .swap-on,
+.swap input:indeterminate ~ .swap-indeterminate {
+  opacity: 1;
 }
 
 .avatar-group :where(.avatar) {
@@ -1165,6 +1148,12 @@ html {
   margin-top: 0;
 }
 
+.mockup-phone .display {
+  overflow: hidden;
+  border-radius: 40px;
+  margin-top: -25px;
+}
+
 @keyframes modal-pop {
   0% {
     opacity: 0;
@@ -1230,14 +1219,6 @@ html {
   }
 }
 
-.btn-xs {
-  height: 1.5rem;
-  min-height: 1.5rem;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-  font-size: 0.75rem;
-}
-
 .btn-sm {
   height: 2rem;
   min-height: 2rem;
@@ -1246,22 +1227,9 @@ html {
   font-size: 0.875rem;
 }
 
-.btn-square:where(.btn-xs) {
-  height: 1.5rem;
-  width: 1.5rem;
-  padding: 0px;
-}
-
 .btn-square:where(.btn-sm) {
   height: 2rem;
   width: 2rem;
-  padding: 0px;
-}
-
-.btn-circle:where(.btn-xs) {
-  height: 1.5rem;
-  width: 1.5rem;
-  border-radius: 9999px;
   padding: 0px;
 }
 
@@ -1345,12 +1313,16 @@ html {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.static {
-  position: static;
+.col-span-2 {
+  grid-column: span 2 / span 2;
 }
 
-.float-right {
-  float: right;
+.row-span-2 {
+  grid-row: span 2 / span 2;
+}
+
+.row-span-3 {
+  grid-row: span 3 / span 3;
 }
 
 .mx-auto {
@@ -1362,93 +1334,71 @@ html {
   display: flex;
 }
 
-.w-2 {
-  width: 0.5rem;
+.grid {
+  display: grid;
 }
 
-.w-24 {
-  width: 6rem;
+.h-full {
+  height: 100%;
 }
 
 .w-14 {
   width: 3.5rem;
 }
 
-.w-44 {
-  width: 11rem;
+.w-96 {
+  width: 24rem;
 }
 
-.w-4 {
-  width: 1rem;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-1 {
-  width: 0.25rem;
-}
-
-.w-12 {
-  width: 3rem;
-}
-
-.w-16 {
-  width: 4rem;
-}
-
-.w-20 {
-  width: 5rem;
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .flex-none {
   flex: none;
 }
 
+.grid-flow-col {
+  grid-auto-flow: column;
+}
+
+.grid-rows-3 {
+  grid-template-rows: repeat(3, minmax(0, 1fr));
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
 .justify-between {
   justify-content: space-between;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
+.gap-4 {
+  gap: 1rem;
 }
 
 .rounded-full {
   border-radius: 9999px;
 }
 
-.rounded {
-  border-radius: 0.25rem;
-}
-
-.rounded-sm {
-  border-radius: 0.125rem;
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
 .rounded-md {
   border-radius: 0.375rem;
 }
 
-.border {
-  border-width: 1px;
+.rounded-b-lg {
+  border-bottom-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
 }
 
-.border-8 {
-  border-width: 8px;
-}
-
-.border-2 {
-  border-width: 2px;
-}
-
-.border-4 {
-  border-width: 4px;
-}
-
-.border-TEAL_LIGHT_ACTIVE {
-  --tw-border-opacity: 1;
-  border-color: rgb(176 218 225 / var(--tw-border-opacity, 1));
+.rounded-l {
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
 }
 
 .bg-TEAL_NORMAL {
@@ -1456,14 +1406,9 @@ html {
   background-color: rgb(0 135 158 / var(--tw-bg-opacity, 1));
 }
 
-.bg-TEAL_LIGHT_ACTIVE {
+.bg-RED_LIGHT_ACTIVE {
   --tw-bg-opacity: 1;
-  background-color: rgb(176 218 225 / var(--tw-bg-opacity, 1));
-}
-
-.bg-TEAL_LIGHT {
-  --tw-bg-opacity: 1;
-  background-color: rgb(230 243 245 / var(--tw-bg-opacity, 1));
+  background-color: rgb(231 186 186 / var(--tw-bg-opacity, 1));
 }
 
 .bg-RED_LIGHT {
@@ -1471,28 +1416,8 @@ html {
   background-color: rgb(247 233 233 / var(--tw-bg-opacity, 1));
 }
 
-.bg-gradient-to-r {
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
-.bg-gradient-to-t {
-  background-image: linear-gradient(to top, var(--tw-gradient-stops));
-}
-
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
-}
-
-.from-TEAL_LIGHT {
-  --tw-gradient-from: #E6F3F5 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(230 243 245 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-TEAL_NORMAL {
-  --tw-gradient-from: #00879E var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(0 135 158 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .from-TEAL_LIGHT_ACTIVE {
@@ -1501,76 +1426,13 @@ html {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-90\% {
-  --tw-gradient-from-position: 90%;
-}
-
-.from-80\% {
-  --tw-gradient-from-position: 80%;
-}
-
-.from-50\% {
-  --tw-gradient-from-position: 50%;
-}
-
-.from-0\% {
-  --tw-gradient-from-position: 0%;
-}
-
-.from-30\% {
-  --tw-gradient-from-position: 30%;
-}
-
-.from-20\% {
-  --tw-gradient-from-position: 20%;
-}
-
 .from-10\% {
   --tw-gradient-from-position: 10%;
 }
 
-.from-40\% {
-  --tw-gradient-from-position: 40%;
-}
-
-.from-5\% {
-  --tw-gradient-from-position: 5%;
-}
-
-.from-15\% {
-  --tw-gradient-from-position: 15%;
-}
-
-.from-25\% {
-  --tw-gradient-from-position: 25%;
-}
-
-.from-35\% {
-  --tw-gradient-from-position: 35%;
-}
-
-.from-45\% {
-  --tw-gradient-from-position: 45%;
-}
-
-.from-55\% {
-  --tw-gradient-from-position: 55%;
-}
-
-.from-65\% {
-  --tw-gradient-from-position: 65%;
-}
-
-.from-75\% {
-  --tw-gradient-from-position: 75%;
-}
-
-.from-85\% {
-  --tw-gradient-from-position: 85%;
-}
-
-.to-90\% {
-  --tw-gradient-to-position: 90%;
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .px-1 {
@@ -1578,14 +1440,51 @@ html {
   padding-right: 0.25rem;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
-.text-TEAL_DARK {
-  --tw-text-opacity: 1;
-  color: rgb(0 101 119 / var(--tw-text-opacity, 1));
+.text-9xl {
+  font-size: 8rem;
+  line-height: 1;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
+.font-thin {
+  font-weight: 100;
+}
+
+.font-light {
+  font-weight: 300;
 }
 
 .text-TEAL_DARKER {
@@ -1598,8 +1497,22 @@ html {
   color: rgb(230 243 245 / var(--tw-text-opacity, 1));
 }
 
-.hover\:border-2:hover {
-  border-width: 2px;
+.text-TEAL_DARK {
+  --tw-text-opacity: 1;
+  color: rgb(0 101 119 / var(--tw-text-opacity, 1));
+}
+
+.antialiased {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+body{
+  font-family: "Poppins", serif;
+}
+
+.hover\:rounded-md:hover {
+  border-radius: 0.375rem;
 }
 
 .hover\:border-TEAL_LIGHT_ACTIVE:hover {
@@ -1607,21 +1520,23 @@ html {
   border-color: rgb(176 218 225 / var(--tw-border-opacity, 1));
 }
 
+.hover\:bg-TEAL_LIGHT_ACTIVE:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(176 218 225 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:bg-TEAL_NORMAL_HOVER:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(0 122 142 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:outline:hover {
-  outline-style: solid;
+.hover\:text-neutral-50:hover {
+  --tw-text-opacity: 1;
+  color: rgb(250 250 250 / var(--tw-text-opacity, 1));
 }
 
-.hover\:outline-2:hover {
-  outline-width: 2px;
-}
-
-.hover\:outline-8:hover {
-  outline-width: 8px;
+.hover\:outline-4:hover {
+  outline-width: 4px;
 }
 
 .hover\:outline-offset-2:hover {
