Styling Home Part 2

--- a/src/output.css
+++ b/src/output.css
@@ -887,6 +887,18 @@ html {
     }
   }
 
+  .btn-outline.btn-primary:hover {
+    --tw-text-opacity: 1;
+    color: var(--fallback-pc,oklch(var(--pc)/var(--tw-text-opacity)));
+  }
+
+  @supports (color: color-mix(in oklab, black, black)) {
+    .btn-outline.btn-primary:hover {
+      background-color: color-mix(in oklab, var(--fallback-p,oklch(var(--p)/1)) 90%, black);
+      border-color: color-mix(in oklab, var(--fallback-p,oklch(var(--p)/1)) 90%, black);
+    }
+  }
+
   .btn-disabled:hover,
     .btn[disabled]:hover,
     .btn:disabled:hover {
@@ -943,6 +955,19 @@ html {
   .footer-center {
     grid-auto-flow: row dense;
   }
+}
+
+.hero {
+  display: grid;
+  width: 100%;
+  place-items: center;
+  background-size: cover;
+  background-position: center;
+}
+
+.hero > * {
+  grid-column-start: 1;
+  grid-row-start: 1;
 }
 
 .link {
@@ -1083,12 +1108,35 @@ html {
     background-color: var(--btn-color, var(--fallback-b2));
     border-color: var(--btn-color, var(--fallback-b2));
   }
+
+  .btn-primary {
+    --btn-color: var(--fallback-p);
+  }
+}
+
+@supports (color: color-mix(in oklab, black, black)) {
+  .btn-outline.btn-primary.btn-active {
+    background-color: color-mix(in oklab, var(--fallback-p,oklch(var(--p)/1)) 90%, black);
+    border-color: color-mix(in oklab, var(--fallback-p,oklch(var(--p)/1)) 90%, black);
+  }
 }
 
 .btn:focus-visible {
   outline-style: solid;
   outline-width: 2px;
   outline-offset: 2px;
+}
+
+.btn-primary {
+  --tw-text-opacity: 1;
+  color: var(--fallback-pc,oklch(var(--pc)/var(--tw-text-opacity)));
+  outline-color: var(--fallback-p,oklch(var(--p)/1));
+}
+
+@supports (color: oklch(0% 0 0)) {
+  .btn-primary {
+    --btn-color: var(--p);
+  }
 }
 
 .btn.glass {
@@ -1117,6 +1165,16 @@ html {
 .btn-ghost.btn-active {
   border-color: transparent;
   background-color: var(--fallback-bc,oklch(var(--bc)/0.2));
+}
+
+.btn-outline.btn-primary {
+  --tw-text-opacity: 1;
+  color: var(--fallback-p,oklch(var(--p)/var(--tw-text-opacity)));
+}
+
+.btn-outline.btn-primary.btn-active {
+  --tw-text-opacity: 1;
+  color: var(--fallback-pc,oklch(var(--pc)/var(--tw-text-opacity)));
 }
 
 .btn.btn-disabled,
@@ -1530,20 +1588,16 @@ html {
   top: 0px;
 }
 
-.z-10 {
-  z-index: 10;
-}
-
-.z-40 {
-  z-index: 40;
-}
-
 .z-0 {
   z-index: 0;
 }
 
 .z-30 {
   z-index: 30;
+}
+
+.z-40 {
+  z-index: 40;
 }
 
 .float-end {
@@ -1555,22 +1609,6 @@ html {
   margin-right: auto;
 }
 
-.mt-20 {
-  margin-top: 5rem;
-}
-
-.mt-32 {
-  margin-top: 8rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
-.-mb-1 {
-  margin-bottom: -0.25rem;
-}
-
 .-mb-5 {
   margin-bottom: -1.25rem;
 }
@@ -1579,24 +1617,12 @@ html {
   margin-right: -1.25rem;
 }
 
-.-ml-5 {
-  margin-left: -1.25rem;
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
-.-mr-10 {
-  margin-right: -2.5rem;
-}
-
-.-mb-10 {
-  margin-bottom: -2.5rem;
-}
-
-.-mb-2 {
-  margin-bottom: -0.5rem;
-}
-
-.-mb-6 {
-  margin-bottom: -1.5rem;
+.mt-20 {
+  margin-top: 5rem;
 }
 
 .flex {
@@ -1607,11 +1633,6 @@ html {
   display: grid;
 }
 
-.size-10 {
-  width: 2.5rem;
-  height: 2.5rem;
-}
-
 .h-64 {
   height: 16rem;
 }
@@ -1620,12 +1641,24 @@ html {
   height: 20rem;
 }
 
+.h-dvh {
+  height: 100dvh;
+}
+
 .h-full {
   height: 100%;
 }
 
-.h-dvh {
-  height: 100dvh;
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-2\/3 {
+  height: 66.666667%;
+}
+
+.min-h-screen {
+  min-height: 100vh;
 }
 
 .w-10 {
@@ -1653,12 +1686,24 @@ html {
   width: 100%;
 }
 
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-2\/3 {
+  width: 66.666667%;
+}
+
+.max-w-md {
+  max-width: 28rem;
+}
+
 .flex-none {
   flex: none;
 }
 
-.rotate-45 {
-  --tw-rotate: 45deg;
+.rotate-\[-6\.142rad\] {
+  --tw-rotate: -6.142rad;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1714,6 +1759,26 @@ html {
   border-radius: 0.125rem;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.rounded-\[\] {
+  border-radius: ;
+}
+
+.rounded-\[2\] {
+  border-radius: 2;
+}
+
+.rounded-\[2v\] {
+  border-radius: 2v;
+}
+
+.rounded-\[2vw\] {
+  border-radius: 2vw;
+}
+
 .rounded-b-lg {
   border-bottom-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
@@ -1739,8 +1804,37 @@ html {
   background-color: var(--fallback-n,oklch(var(--n)/var(--tw-bg-opacity, 1)));
 }
 
+.bg-TEAL_LIGHT {
+  --tw-bg-opacity: 1;
+  background-color: rgb(230 243 245 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[url\(assets\/bg\.jpg\)\] {
+  background-image: url(assets/bg.jpg);
+}
+
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+
+.bg-\[url\(assets\/bg\.j\)\] {
+  background-image: url(assets/bg.j);
+}
+
+.bg-\[url\(assets\/bg\.\)\] {
+  background-image: url(assets/bg.);
+}
+
+.bg-\[url\(assets\/bg\.p\)\] {
+  background-image: url(assets/bg.p);
+}
+
+.bg-\[url\(assets\/bg\.pn\)\] {
+  background-image: url(assets/bg.pn);
+}
+
+.bg-\[url\(assets\/bg\.png\)\] {
+  background-image: url(assets/bg.png);
 }
 
 .from-TEAL_LIGHT_ACTIVE {
@@ -1753,6 +1847,10 @@ html {
   --tw-gradient-from-position: 10%;
 }
 
+.bg-fixed {
+  background-attachment: fixed;
+}
+
 .fill-TEAL_NORMAL {
   fill: #00879E;
 }
@@ -1760,10 +1858,6 @@ html {
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
-}
-
-.p-10 {
-  padding: 2.5rem;
 }
 
 .px-1 {
@@ -1784,9 +1878,18 @@ html {
   padding-top: 1.25rem;
 }
 
+.pt-64 {
+  padding-top: 16rem;
+}
+
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .text-7xl {
@@ -1804,18 +1907,6 @@ html {
   line-height: 1.75rem;
 }
 
-.text-\[14px\] {
-  font-size: 14px;
-}
-
-.text-\[50px\] {
-  font-size: 50px;
-}
-
-.text-\[20px\] {
-  font-size: 20px;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -1826,6 +1917,11 @@ html {
 
 .font-semibold {
   font-weight: 600;
+}
+
+.text-CREAM_LIGHT {
+  --tw-text-opacity: 1;
+  color: rgb(255 254 251 / var(--tw-text-opacity, 1));
 }
 
 .text-TEAL_DARK {
@@ -1853,15 +1949,6 @@ html {
   color: var(--fallback-nc,oklch(var(--nc)/var(--tw-text-opacity, 1)));
 }
 
-.text-CREAM_LIGHT {
-  --tw-text-opacity: 1;
-  color: rgb(255 254 251 / var(--tw-text-opacity, 1));
-}
-
-.text-\[px\] {
-  color: px;
-}
-
 .antialiased {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -1871,6 +1958,21 @@ html {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.drop-shadow-md {
+  --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.drop-shadow-xl {
+  --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.drop-shadow {
+  --tw-drop-shadow: drop-shadow(0 1px 2px rgb(0 0 0 / 0.1)) drop-shadow(0 1px 1px rgb(0 0 0 / 0.06));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .duration-700 {
